# Slambook-lib-install

./: .gitignore  README.md
ch3/examples/: CMakeLists.txt  coordinateTransform.cpp  plotTrajectory.cpp
ch3/exercise/: CMakeLists.txt  Ex5.cpp
ch3/useEigen/: eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  EigenGeometry_example.cpp
ch4/: CMakeLists.txt
ch4/example/: CMakeLists.txt
ch7/: CMakeLists.txt  orb_self.cpp
